--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,7 +33,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:text">@string/SearchButton</item>
-        <item name="android:onClick">search</item>
+        <item name="android:onClick">clear</item>
     </style>
 
     <style name="AirportListID">
