Add GPS tracking for nearest list

--- a/app/src/main/res/layout/airport_list.xml
+++ b/app/src/main/res/layout/airport_list.xml
@@ -17,4 +17,12 @@
         android:id="@+id/AirportListCityState"
         style="@style/AirportListCityState"/>
 
+    <TextView
+        android:id="@+id/AirportListBearing"
+        style="@style/AirportListBearing"/>
+
+    <TextView
+        android:id="@+id/AirportListDistance"
+        style="@style/AirportListDistance"/>
+
 </RelativeLayout>
