--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".AirportSearch">
+    tools:context=".AirportSearch"
+    android:keepScreenOn="true">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
