--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,11 +44,11 @@
     </style>
 
     <style name="AirportListName">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">200dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_toRightOf">@id/AirportListID</item>
         <item name="android:ellipsize">marquee</item>
-        <item name="android:singleLine">false</item>
+        <item name="android:singleLine">true</item>
         <item name="android:textSize">14sp</item>
         <item name="android:paddingLeft">0dp</item>
         <item name="android:paddingTop">1dp</item>
@@ -62,6 +62,28 @@
         <item name="android:singleLine">true</item>
         <item name="android:textSize">14sp</item>
         <item name="android:paddingLeft">85dp</item>
+    </style>
+
+    <style name="AirportListBearing">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_toRightOf">@id/AirportListName</item>
+        <item name="android:gravity">right</item>
+        <item name="android:ellipsize">marquee</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:paddingRight">2dp</item>
+    </style>
+
+    <style name="AirportListDistance">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_below">@id/AirportListBearing</item>
+        <item name="android:gravity">right</item>
+        <item name="android:ellipsize">marquee</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:paddingRight">2dp</item>
     </style>
 
     <style name="AirportID">
