--- a/app/src/main/res/layout/airport_display.xml
+++ b/app/src/main/res/layout/airport_display.xml
@@ -6,9 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_search">
+    tools:showIn="@layout/activity_search"
+    android:keepScreenOn="true">
 
-    <TextView
+<TextView
         android:id="@+id/AirportID"
         style="@style/AirportID"/>
 
