--- a/app/src/main/res/layout/airport_list.xml
+++ b/app/src/main/res/layout/airport_list.xml
@@ -3,7 +3,8 @@
     android:id="@+id/AirportList"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:padding="6dp">
+    android:padding="6dp"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/AirportListID"
